--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 .top-nav {
     height: 150px;
     background-color: green;
-    display: flex;
     margin: 10px;
+    padding: 20px;
 }
 .side-nav {
     height: 300px;
@@ -18,16 +18,20 @@
     height: 400px;
     width: 700px;
     background-color: red;
+    margin-left: 20px;
+    padding: 10px;
 }
 .sub-content {
     height: 200px;
     width: 210px;
     background-color: yellow;
+    margin: 10px;
 }
 #advertisement {
     height: 120px;
     width: 660px;
     background-color: purple;
+    margin: 10px;
 }
 .row {
     display: flex;
